# botas

./: .env.vault  .gitignore  .npmrc  404.html  AGENTS.md  GEMINI.md  README.md  RELEASING.md  Skills.md  authentication.html  bot-spec.md  docfx.json  eslint.config.js  getting-started.html  gulpfile.js  hashmap.json  history.md  index.html  logging.html  middleware.html  observability.html  package-lock.json  package.json  pnpm-lock.yaml  setVersion.js  setup.html  teams-features.html  tsconfig.build.json  tsconfig.json  typedoc.json  typing-activity.html  version.json
.azdo/: cd.yaml  ci-pr.yaml
.github/: copilot-instructions.md
.squad/: _msg.txt  commit-msg.txt  decisions-archive-2026-04-21-26.md  decisions-archive-2026-04.md  decisions-archive-2026-06-29T10273.md  decisions.md
assets/: app.DqoJpkOr.js  authentication.md.EayIhLzs.js  authentication.md.EayIhLzs.lean.js  getting-started.md.DkySqtbR.js  getting-started.md.DkySqtbR.lean.js  index.md.BwDGzmqK.js  index.md.BwDGzmqK.lean.js  languages_dotnet.md.DsnciBYx.js  languages_dotnet.md.DsnciBYx.lean.js  languages_index.md.l6ilu7NS.js  languages_index.md.l6ilu7NS.lean.js  languages_nodejs.md.BQ0JL2Tl.js  languages_nodejs.md.BQ0JL2Tl.lean.js  languages_python.md.DoviyJW3.js  languages_python.md.DoviyJW3.lean.js  logging.md.GijHYkyd.js  logging.md.GijHYkyd.lean.js  middleware.md.cta1znbc.js  middleware.md.cta1znbc.lean.js  observability.md.DPX6vXxt.js  observability.md.DPX6vXxt.lean.js  setup.md.ZpIHv40o.js  (+5 more)
docs/: Setup.md  (+3 more)
python/samples/07-redis-state-bot/: README.md  docker-compose.yml  main.py  pyproject.toml
(+353 files in other folders)
