[project]
name = "07-redis-state-bot"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "botas-fastapi",
    "botas[redis]",
]

[tool.uv.sources]
botas = { path = "../../packages/botas", editable = true }
botas-fastapi = { path = "../../packages/botas-fastapi", editable = true }
